# search-PubMed-for-research-papers-and-filter

./: README.md  pyproject.toml  results.csv
getpaperslist/: cli.py  pubmed_fetcher.py
