[tool.poetry]
name = "pubmed-paper-fetcher"
version = "0.1.0"
description = "CLI tool to fetch PubMed papers with at least one pharma/biotech company author and output as CSV."
authors = ["Alexandar <alexmurugavelma@gmail.com>"]
readme = "README.md"

packages = [{include = "getpaperslist"}]

[tool.poetry.dependencies]
python = ">=3.11"
requests = ">=2.32.3,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
get-papers-list = "getpaperslist.cli:main"
